# ThreeBodySimulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ThreeBodySimulation.slnx  build-mingw-libs.sh  toolchain-mxe.cmake
ThreeBodySimulation/: ThreeBodySimulation.vcxproj  ThreeBodySimulation.vcxproj.filters  ThreeBodySolver.cpp  ThreeBodySolver.h  Vector3.h
include/: Constants.h  ThreeBodySolver.h  Vector3.h
src/: ThreeBodySolver.cpp  main.cpp
